[package]
name = "bwynd-converter-and-staker"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = {version = "1.0.1"}
cw20 = {version = "1.0.1"}
cw-utils = "1.0"
cw-storage-plus  = { version = "1.0.1" } 
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
syneswap = { path = "../../packages/syneswap/" }
cw20-base = { version = "1.0.1", features = ["library"] }
synedao = { path = "../../packages/synedao" }

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-storage = { version = "1.0.0" }
chrono = {version = "0.4.20" }
