[package]
name = "loopswap-farming"
version = "1.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "1.0.1" } 
cw20 = { version = "1.0.1" } 
cosmwasm-std = { version = "1.1.0" }
cw-storage-plus = { version = "1.0.1" } 
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "3.0.2", features = ["with-bytes"] }
cw20-base = { version = "1.0.1"}
prost = "0.9"
syneswap = { path = "../../packages/syneswap/" }
cosmwasm-schema = "1.1.0"

[dev-dependencies]
cosmwasm-vm = "1.0.0"
cosmwasm-storage = { version = "1.0.0" }