[package]
name = "synergistic_wynd_gauge"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.0" }
cw-core-interface = { path = "../../packages/cw-core-interface", version = "1.1.1"}
cw-storage-plus = { version = "1.0.1" }
cw-utils = "1.0.1"
cw2 = { version = "1.0.1" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
syneswap = { path = "../../packages/syneswap", version = "2.6.1"}
syneswap-staking = { path = "../syneswap_staking"}

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
cw4 = "0.16"
cw4-group = "0.16"
