[package]
name = "syneswap-proposal"
version = "1.0.0"
edition = "2018"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.10.3" } 
cw2 = { version = "1.0.1" } 
cw20 = {version = "1.0.1"}
cw20-base = {version = "1.0.1", features = ["library"]}
cw-storage-plus  = { version = "1.0.1" } 
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw-utils = "1.0.1"
syneswap = { path = "../../packages/syneswap", version = "2.6.1"}
syneswap-staking = { path = "../syneswap_staking"}


[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-storage = { version = "1.0.0" }
