[package]
name = "syneswap-staking"
version = "1.0.0"
edition = "2018"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw0 = { version = "0.10.3" }  
cw2 = { version = "1.0.1" } 
cw20 = {version = "1.0.1"}
cw-storage-plus  = { version = "1.0.1" } 
cosmwasm-std = { version = "1.1.0" }
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw20-base = { version = "1.0.1", features = ["library"]}
prost = "0.9"
protobuf = { version = "3.0.2", features = ["with-bytes"] }
syneswap = { path = "../../packages/syneswap/" }
cw-utils = "1.0.1"


[dev-dependencies]
cosmwasm-schema = "1.1.0"
cosmwasm-storage = { version = "1.0.0" }
chrono = {version = "0.4.20" }